<resources>
    <string name="app_name">Movie Box</string>
    <string name="viewWelcome">Welcome to the Movie Box</string>
    <string name="LogInBtn">Log In</string>
    <string name="regBtn">Register</string>
    <string name="usernameHint">Enter username</string>
    <string name="hintPass">Password</string>
    <string name="btnSubReg">Register</string>
    <string name="txtName">Enter name</string>
    <string name="txtPhoneNo">Enter Phone Number</string>
    <string name="txtRegUsername">Enter email</string>
    <string name="txtRegPass">Password</string>
    <string name="txtRegConfirmPass">Confirm Password</string>
    <string name="LogInSubmitBtn">Log In</string>
    <string name="editTxtLogInUser">Enter email</string>
    <string name="editTxtLogInPass">Password</string>
    <string name="btnLogInSubmit">Log In</string>
    <string name="btnLogOut">Log Out</string>
    <string name="btnNowShowing">Now Showing</string>
    <string name="btnUpcoming">Upcoming</string>
    <string name="btnViewProfile">View Profile</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="btnPayment">Pay with Paypal</string>
    <string name="txtTitle">Now Showing</string>
    <string name="descGD">DESCRIPTION</string>
    <string name="textDescGD">Career con artist Roy Courtnay can hardly believe his luck when he meets well-to-do widow Betty McLeish online. As Betty opens her life and home to him, Roy is surprised to find himself caring about her, turning what should be a cut-and-dry swindle into the most treacherous tightrope walk of his life.</string>
    <string name="textDirector">Director</string>
    <string name="directorName"> Bill Condon</string>
    <string name="releaseDate">Release date</string>
    <string name="date"> November 15, 2019</string>
    <string name="textCast">Cast</string>
    <string name="castName">Ian McKellen, Helen Mirren, Russell Tovey, Jim Carter</string>
    <string name="runningTime">RunningTime</string>
    <string name="time">110 minutes</string>
    <string name="desc">Description</string>
    <string name="textDescriptionTDF">Sarah Connor and a hybrid cyborg human must protect a young girl from a newly modified liquid Terminator from the future.</string>
    <string name="directorTDF">Director</string>
    <string name="directorNameTDF">Tim Miller</string>
    <string name="releaseDateTDF">Release Date</string>
    <string name="dateTDF">November 1, 2019</string>
    <string name="castTDF">Cast</string>
    <string name="castNameTDF">Linda Hamilton, Arnold Schwarzenegger, Mackenzie Davis, Natalia Reyes, Gabriel Luna, Diego Boneta, Edward Furlong</string>
    <string name="runningTimeTDF">Running Time</string>
    <string name="timeTDF">128 minutes</string>
    <string name="radioGD">GOOD LIAR</string>
    <string name="radioTDF">TERMINATOR DARK FATE</string>
    <string name="radioF2">FROZEN 2</string>
    <string name="radioPWF">PLAYING WITH FIRE</string>
    <string name="radioAS">ATLANTICS</string>
    <string name="movieDetail">SHOW DETAILS</string>
    <string name="book">Book</string>
    <string name="screenThisWay">Screen This Way</string>
    <string name="selectDate">Select Booking Date</string>
    <string name="profileDetails">Profile</string>
    <string name="gotohome">Go To Home</string>
    <string name="bookTickets">Make Payment</string>
    <string name="btnViewTotal">View Total Price</string>
    <string name="txtViewProfileDescName">Profile Name</string>
    <string name="txtViewProfileDescEmail">Your Email</string>
    <string name="TxtViewProDescName">Your Name</string>
    <string name="txtViewPricePerT">Ticket price : $10</string>
    <string name="txtViewPrice">Price per Ticket : $10</string>
    <string name="txtViewSuccess" translatable="false">Your ticket has been booked succesfully. You will receive an email with the ticket number. Provide this number to any staff member for auditorium information.</string>
    <string name="btnGoHome">Home</string>
    <string name="txtViewTime">Show Time available : 3pm</string>
</resources>
